# ImposterKings-Bot

./: .gitignore  README.md  conftest.py  pyproject.toml  run_game.py
packaging/: build.py  imposterkings.spec
src/imposterkings/: __init__.py  abilities.py  actions.py  agents.py  arena.py  budget.py  card_text.py  cards.py  cli.py  eval_slice.py  explain.py  generate.py  infoset.py  mcts.py  paths.py  record.py  rng.py  rules.py  scenario.py  search_scaling.py  state.py
src/imposterkings/analysis/: DATASET.md  README.md  __init__.py  budget_scaling.py  build_tables.py  datagen.py  eval_slice.py  merge_sweeps.py  replay_tools.py  search_scaling.py
src/imposterkings/data_analysis/: DATASET.md  README.md  __init__.py  budget_scaling.py  build_tables.py  datagen.py  eval_slice.py  merge_sweeps.py  replay_tools.py  search_scaling.py
tests/: helpers.py  test_abilities.py  test_attention_evaluator.py  test_attention_model.py  test_attention_view.py  test_budget.py  test_card_text.py  test_datagen_asymmetric.py  test_datagen_replay.py  test_eval_slice.py  test_explain.py  test_features.py  test_features2.py  test_infoset.py  test_infoset_knowledge.py  test_mcts.py  test_ml_pipeline.py  test_nn_agent.py  test_npz_parity.py  test_paths.py  test_plays.py  test_random.py  test_reactions.py  test_review_attn.py  test_rng.py  test_scenario_env.py  test_scenario_setup.py  test_search_scaling.py  test_setup_values.py  test_token_dataset.py  test_tokens.py  test_torch_free.py  test_train_tokens.py  test_tree_view.py  test_ui.py  test_value_head.py  test_winning.py
(+40 files in other folders)
